# cfp_mcmc

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
conda.recipe/: bld.bat  build.sh  meta.yaml
scripts/: get_results.sh  plot.py  plot_folders.py  strip_election_results.py
src/: chain.cpp  chain.ggo  chaincmdline.c  chaincmdline.h
